--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -11,10 +11,10 @@
   with_items:
     - autoconf
     - build-essential
-    - python-setuptools
-    - python-software-properties
-    - python-dev
-    - python-pip
+    - python3-setuptools
+    - python3-software-properties
+    - python3-dev
+    - python3-pip
     - libncurses-dev
 
 # CIS CAT secuirty configurations
