--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -299,7 +299,7 @@
     - x_window
 
 - name: disable apport
-  lineinfile: dest=/etc/init/apport.conf regexp="^env enabled" line="env enabled=0"
+  lineinfile: dest=/etc/default/apport regexp="^enabled" line="enabled=0"
   become: true
   tags:
     - cis_cat_security
