add missing libs to compile xmlsec
otherwise we end up with errors like https://www.reddit.com/r/djangolearning/comments/gx9fnx/unable_to_install_xmlsec_on_ubuntu/

--- a/roles/sentry/defaults/main.yml
+++ b/roles/sentry/defaults/main.yml
@@ -4,6 +4,8 @@ other_python_pkgs:
   - libffi-dev
   - libjpeg-dev
   - libxml2-dev
+  - libxmlsec1-dev
+  - libxmlsec1-openssl
   - libxslt-dev
   - libyaml-dev
   - libpq-dev
@@ -18,4 +20,4 @@ other_python_pkgs:
   - libblas-dev
   - liblapack-dev
   - libatlas-base-dev
-  - python-passlib
+  - python3-passlib
